refactor(auth): remove insecure localStorage fields and improve login security flow